// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MembrePage /> renders an error if loading failed 1`] = `
<div
  class="membre"
>
  <p>
    Oops! Failed to load data.
  </p>
</div>
`;

exports[`<MembrePage /> renders the <Info /> if loading was successful 1`] = `
<div
  class="membre"
>
  <div>
    <div
      class="MembreCard"
    >
      <h4>
        Membre Info
      </h4>
      <ul>
        <li>
          Prénom: 
          Amélie
        </li>
        <li>
          Nom: 
          Aupeix
        </li>
      </ul>
    </div>
    <section
      class="MembreList"
    >
      <h2>
        Modifier un membre
      </h2>
      <form>
        <label
          for="postPrenom"
        >
          Prenom:
          <input
            id="postPrenom"
            name="postPrenom"
            type="text"
            value="Amélie"
          />
        </label>
        <label
          for="postNom"
        >
          Nom:
          <input
            id="postNom"
            name="postNom"
            type="text"
            value="Aupeix"
          />
        </label>
        <label
          for="postMajeur"
        >
          Majeur:
          <input
            id="postMajeur"
            name="postMajeur"
            type="text"
            value="1"
          />
        </label>
        <button
          type="button"
        >
          Save changes
        </button>
      </form>
    </section>
  </div>
</div>
`;

exports[`<MembrePage /> renders the loading status if data invalid 1`] = `
<div
  class="membre"
>
  <p>
    Oops! Failed to load data.
  </p>
</div>
`;

exports[`<MembrePage /> renders the loading status if requesting data 1`] = `
<div
  class="membre"
>
  <p>
    Loading...
  </p>
</div>
`;
